--- a/web_sard/wwwroot/Reports/portage/rpt_1_A.html
+++ b/web_sard/wwwroot/Reports/portage/rpt_1_A.html
@@ -5,7 +5,7 @@
         <div class="col-4 text-right">
             <h4>
                 <label class="border border-secondary p-3 text-center">
-                    {{ajax.KindCode==1?"ورود":ajax.KindCode==15?"برگشت از ورود":ajax.KindCode==11?"خروج":"برگشت از خروج"}}  
+                    {{ajax.KindCode==1?"ورود":ajax.KindCode==15?"برگشت از ورود":ajax.KindCode==11?"خروج":"برگشت از برگشت"}}  
                 </label>
             </h4>
 
